--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
       "declaration": true,
       "skipLibCheck": true,
       // Ensure that Babel can safely transpile files in the TypeScript project
-      "isolatedModules": true,
+      "isolatedModules": false,
       "noEmit": true,
       "outDir": "./build"
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
   }
