Removed unnecessary lines

--- a/package.json
+++ b/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "test",
+  "name": "test-withim",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "jest --coverage",
     "dev": "nodemon src/index.ts",
-    "build": "npx tsc",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "start": "babel-node --extensions \".ts,.js\" src/index.ts",
-    "start:prod": "node build/index.js",
-    "build2": "babel src -d build --ignore=\"./src/**/*.spec.ts\" --extensions \".ts,.js\"",
-    "babel-version": "babel --version",
+    "build": "npx tsc --project tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "prepare": "husky install",
-    "create-hook": "husky add .husky/pre-commit \"npm run lint && npm test && npx lint-staged && npm run sonar-scanner\"",
-    "sonar-scanner": "sonar-scanner.bat"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "author": "",
   "license": "",
   "dependencies": {
-    "@babel/register": "^7.17.7",
     "apollo-server-express": "^3.8.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -38,16 +28,6 @@
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
-    "@babel/node": "^7.17.10",
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-transform-classes": "^7.18.4",
-    "@babel/plugin-transform-runtime": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-stage-0": "^7.8.3",
-    "@babel/preset-typescript": "^7.17.12",
-    "@babel/runtime": "^7.18.3",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
